--- a/i18n/de_AT.csv
+++ b/i18n/de_AT.csv
@@ -56,7 +56,7 @@
 "Void not possible anymore for this payment, please try cancel instead!","Das Aufheben der Authorisierung ist nicht mehr möglich!"
 "Wirecard Checkout Seamless Fund Transfer","Wirecard Checkout Seamless Auszahlungr"
 "Wirecard Checkout Seamless @Quick","Wirecard Checkout Seamless @Quick"
-"Wirecard Checkout Seamless Bancontact/Mister Cash","Wirecard Checkout Seamless Bancontact/Mister Cash"
+"Wirecard Checkout Seamless Bancontact","Wirecard Checkout Seamless Bancontact"
 "Wirecard Checkout Seamless Credit Card - Mail Order / Telephone Order","Wirecard Checkout Page Kreditkarte - Post / Telefonbestellung"
 "Wirecard Checkout Seamless Credit Card","Wirecard Checkout Seamless Kreditkarte"
 "Wirecard Checkout Seamless eKonto","Wirecard Checkout Seamless eKonto"
@@ -69,7 +69,6 @@
 "Wirecard Checkout Seamless Invoice","Wirecard Checkout Seamless Rechnung"
 "Wirecard Checkout Seamless Maestro SecureCode","Wirecard Checkout Seamless Maestro SecureCode"
 "Wirecard Checkout Seamless moneta.ru","Wirecard Checkout Seamless moneta.ru"
-"Wirecard Checkout Seamless mpass","Wirecard Checkout Seamless mpass"
 "Wirecard Checkout Seamless My Voucher","Wirecard Checkout Seamless Mein Gutschein"
 "Wirecard Checkout Seamless paybox","Wirecard Checkout Seamless paybox"
 "Wirecard Checkout Seamless PayPal","Wirecard Checkout Seamless PayPal"
