--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -55,7 +55,7 @@
 "Version: %product","Version: %product"
 "Void not possible anymore for this payment, please try cancel instead!","Void not possible anymore for this payment, please try cancel instead!"
 "Wirecard Checkout Seamless @Quick","Wirecard Checkout Seamless @Quick"
-"Wirecard Checkout Seamless Bancontact/Mister Cash","Wirecard Checkout Seamless Bancontact/Mister Cash"
+"Wirecard Checkout Seamless Bancontact","Wirecard Checkout Seamless Bancontact"
 "Wirecard Checkout Seamless Credit Card - Mail Order / Telephone Order","Wirecard Checkout Seamless Credit Card - Mail Order / Telephone Order"
 "Wirecard Checkout Seamless Credit Card","Wirecard Checkout Seamless Credit Card"
 "Wirecard Checkout Seamless eKonto","Wirecard Checkout Seamless eKonto"
@@ -69,7 +69,6 @@
 "Wirecard Checkout Seamless Invoice","Wirecard Checkout Seamless Invoice"
 "Wirecard Checkout Seamless Maestro SecureCode","Wirecard Checkout Seamless Maestro SecureCode"
 "Wirecard Checkout Seamless moneta.ru","Wirecard Checkout Seamless moneta.ru"
-"Wirecard Checkout Seamless mpass","Wirecard Checkout Seamless mpass"
 "Wirecard Checkout Seamless My Voucher","Wirecard Checkout Seamless My Voucher"
 "Wirecard Checkout Seamless paybox","Wirecard Checkout Seamless paybox"
 "Wirecard Checkout Seamless PayPal","Wirecard Checkout Seamless PayPal"
