--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -78,7 +78,7 @@
 "Wirecard Checkout Seamless SEPA Direct Debit","Wirecard Checkout Seamless SEPA Direct Debit"
 "Wirecard Checkout Seamless Skrill Digital Wallet","Wirecard Checkout Seamless Skrill Digital Wallet"
 "Wirecard Checkout Seamless Skrill Direct","Wirecard Checkout Seamless Skrill Direct"
-"Wirecard Checkout Seamless SOFORT Banking","Wirecard Checkout Seamless SOFORT Banking"
+"Wirecard Checkout Seamless Online bank transfer.","Wirecard Checkout Seamless Online bank transfer."
 "Wirecard Checkout Seamless Support Request","Wirecard Checkout Seamless Support Request"
 "Wirecard Checkout Seamless TatraPay","Wirecard Checkout Seamless TatraPay"
 "Wirecard Checkout Seamless Trustly","Wirecard Checkout Seamless Trustly"
