#21 German translation of Sofort.

--- a/i18n/de_AT.csv
+++ b/i18n/de_AT.csv
@@ -78,7 +78,7 @@
 "Wirecard Checkout Seamless SEPA Direct Debit","Wirecard Checkout Seamless SEPA Lastschrift"
 "Wirecard Checkout Seamless Skrill Digital Wallet","Wirecard Checkout Seamless Skrill Digital Wallet"
 "Wirecard Checkout Seamless Skrill Direct","Wirecard Checkout Seamless Skrill Direct"
-"Wirecard Checkout Seamless Online bank transfer.","Wirecard Checkout Seamless Online bank transfer."
+"Wirecard Checkout Seamless Online bank transfer.","Wirecard Checkout Seamless Sofort."
 "Wirecard Checkout Seamless TatraPay","Wirecard Checkout Seamless TatraPay"
 "Wirecard Checkout Seamless Trustly","Wirecard Checkout Seamless Trustly"
 "Wirecard Checkout Seamless TrustPay","Wirecard Checkout Seamless TrustPay"
